# fhir-for-research

./: .env  .gitignore  .gitlab-ci.yml  2023-05-webinar-refs.html  2023-05-webinar-refs.qmd  DESCRIPTION  README.md  _environment  _quarto.yml  bibliography.bib  contribute.html  contribute.qmd  custom.scss  fhir-ai-resources.html  fhir-ai-resources.qmd  head.html  index.css  index.html  index.qmd  index.scss  pre-render.sh  pyproject.toml  requirements.txt  roles.html  roles.qmd  scripts.html  search.json  setup-mac.html  setup-mac.qmd  setup-windows.html  setup-windows.qmd  sitemap.xml  slides.scss  style-guide.html  style-guide.qmd  styles.css  title-block.html
fhir-data/: Louie190_Weber641_837e80f6-a7a5-77f8-36aa-c7b8ff002c4b.json  Norris589_Schmeler639_7d9ba758-f0b8-3fc3-befa-f0e8e8fb6935.json  Rashad361_Mayer370_68c3ae0b-e298-62b7-5d3a-7936fd998fe0.json
fhir-server/: docker-compose.yml  hapi.application.yaml
modules/: _metadata.yml  cdms.html  cdms.qmd  data-modeling-reading-igs.html  data-modeling-reading-igs.qmd  data-modeling-real-world-igs.html  data-modeling-real-world-igs.qmd  data-modeling-writing-igs.html  data-modeling-writing-igs.qmd  fhir-accessing-data.html  fhir-accessing-data.qmd  fhir-community.html  fhir-community.qmd  fhir-emerging-innovations.html  fhir-emerging-innovations.qmd  fhir-from-1000-ft.html  fhir-from-1000-ft.qmd  fhir-from-10000-ft.html  fhir-from-10000-ft.qmd  fhir-history.html  fhir-history.qmd  fhir-research.html  fhir-research.qmd  fhir-versions.html  fhir-versions.qmd  genomics.html  genomics.qmd  key-fhir-resources.html  (+44 more)
(+116 files in other folders)
