[project]
name = "fhir-for-research"
version = "0.1.0"
description = "A Quarto website for training researchers on FHIR"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "fhir-pyrate~=0.2.1",
    "fhirpathpy~=0.2.2",
    "flatten-json~=0.1.14",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "jwt>=1.3.1",
    "pandas~=1.5.3",
    "requests~=2.32.3",
    "rich~=13.8.1",
    "tqdm~=4.66.5",
    "typing>=3.10.0.0",
    "urllib3~=2.2.3",
    "flask>=3.1.0",
]
